omni/tests/goldens/types/unknown_type_13.err
tests/goldens/types/unknown_type_13.omni:1:13: error: unknown type "Mystery13"
  let value13:Mystery13 = 1
              ^~~ hint: import or declare the type before use
tests/goldens/types/unknown_type_13.omni:1:1: error: cannot assign int to Mystery13
  let value13:Mystery13 = 1
  ^~~ hint: adjust the expression or type annotation
