omni/tests/goldens/types/unknown_type_13.omni
let value13:Mystery13 = 1
